--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,52 @@
-import Image from 'next/image'
-import Bleed from 'nextra-theme-docs/bleed'
+# Introduction
+**Saffron | News & announcements aggregation framework**
 
-# Nextra
+The project is maintained by po/iw (ποιώ), a Greek university team that supports Free/Libre and Open Source Software and hardware.<br>
+Saffron was built to help teams collect and compile huge lists of aggregated news and announcement content intuitively and efficiently.<br><br>
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator. 0 lines of code needed.
+### Architecture
 
-It supports Markdown with React components ([MDX](/mdx)), automatically generated [sidebar and anchor links](/docs/anchors), file-system based routing, built-in syntax highlighting, i18n and more.
+Saffron's architecture is based on a `main` node that issues scraping instructions and several `worker` nodes that do the scraping & upload the data to the database.<br>
 
-<Bleed>
-  <Image src="/demo.png" width={2288} height={1974} layout="intrinsic" />
-</Bleed>
+![diagram.svg](https://saffron.poiw.org/diagram.svg)
+
+The communication between the nodes is happening through the `Grid`. By using a `socket.io` implementation and in app encryption system, the communication is end to end safe.<br><br>
+
+### Installation
+
+**To use saffron, you will need to import it from a separate NodeJS App.**
+
+To install it, use:
+`npm i @poiw-org/saffron` or - if you are fancy: `yarn add @poiw-org/saffron`.<br>
+
+Then, you can import it using:
+```
+// ES6
+import saffron from "@poiw/saffron"
+
+// ES5
+const saffron = require("@poiw/saffron")
+```
+Finally, initialize saffron using:
+```
+// Write your desired configuration in a `saffron.json` 
+// file and save it in your project's root folder.
+await saffron.initialize()
+
+// or declare a path that points to your configuration file
+await saffron.initialize("path/to/config.json")
+
+// or pass a JSON object directly
+await saffron.initialize({ ... })
+```
+
+See also: [How to create a configuration file](https://saffron.poiw.org/en/configuration)
+<br>
+
+
+### Usage
+
+
+<br>
+
+This page is maintained by: [DONFN](https://github.com/donfn), [JexSrs](https://github.com/JexSrs)
