--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,14 +10,14 @@ Saffron's architecture is based on a `main` node that issues scraping instructio
 
 ![diagram.svg](https://saffron.poiw.org/diagram.svg)
 
-The communication between the nodes is happening through the `Grid`. By using a `socket.io` implementation and in app encryption system, the communication is end to end safe.<br><br>
+The communication between the nodes is happening through the `Grid`. By using a `socket.io` implementation and in app encryption system, the communication is end to end safe.<br/><br/>
 
 ### Installation
 
 **To use saffron, you will need to import it from a separate NodeJS App.**
 
 To install it, use:
-`npm i @poiw-org/saffron` or - if you are fancy: `yarn add @poiw-org/saffron`.<br>
+`npm i @poiw-org/saffron` or - if you are fancy: `yarn add @poiw-org/saffron`.<br/>
 
 Then, you can import it using:
 ```
@@ -41,12 +41,13 @@ await saffron.initialize({ ... })
 ```
 
 See also: [How to create a configuration file](https://saffron.poiw.org/en/configuration)
-<br>
+<
+>
 
 
 ### Usage
 
 
-<br>
+<br/>
 
 This page is maintained by: [DONFN](https://github.com/donfn), [JexSrs](https://github.com/JexSrs)
