--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,12 @@
 # Introduction
 **Saffron | News & announcements aggregation framework**
 
-The project is maintained by po/iw (ποιώ), a Greek university team that supports Free/Libre and Open Source Software and hardware.<br>
-Saffron was built to help teams collect and compile huge lists of aggregated news and announcement content intuitively and efficiently.<br><br>
+The project is maintained by po/iw (ποιώ), a Greek university team that supports Free/Libre and Open Source Software and hardware.<br/>
+Saffron was built to help teams collect and compile huge lists of aggregated news and announcement content intuitively and efficiently.<br/><br/>
 
 ### Architecture
 
-Saffron's architecture is based on a `main` node that issues scraping instructions and several `worker` nodes that do the scraping & upload the data to the database.<br>
+Saffron's architecture is based on a `main` node that issues scraping instructions and several `worker` nodes that do the scraping & upload the data to the database.<br/>
 
 ![diagram.svg](https://saffron.poiw.org/diagram.svg)
 
